--- a/AppServices/WebAPIService/Dockerfile
+++ b/AppServices/WebAPIService/Dockerfile
@@ -1,5 +1,5 @@
 # https://hub.docker.com/_/microsoft-dotnet-core
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine AS build
 
 RUN mkdir -p /source
 WORKDIR /source
@@ -11,7 +11,7 @@ RUN dotnet restore
 RUN dotnet publish -c debug -o /app --no-restore
 
 # final stage/image
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-alpine
 WORKDIR /app
 COPY --from=build /app ./
 
