Move QueueAdapter and add rmq base sprt #4

--- a/AppServices/WorkerServices/BaseWorkerService/appsettings.json
+++ b/AppServices/WorkerServices/BaseWorkerService/appsettings.json
@@ -1,4 +1,48 @@
 {
+  "Serilog": {
+    "Using": [ "Serilog.Filters.Expressions" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "===> {Timestamp:HH:mm:ss.fff zzz} [{ThreadId}] [{Level}] {Message}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/Worker-.txt",
+          "outputTemplate": "===> {Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}",
+          "retainedFileCountLimit": 31,
+          "rollingInterval": "Day",
+          "fileSizeLimitBytes": 104857600,
+          "rollOnFileSizeLimit": true
+        }
+      },
+      {
+        "Name": "Logger",
+        "Args": {
+          "configureLogger": {
+            "MinimumLevel": "Information",
+            "WriteTo": [
+              {
+                "Name": "File",
+                "Args": {
+                  "path": "logs/Worker.Error-.txt",
+                  "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] ({SourceContext}) {Message}{NewLine}{Exception}",
+                  "retainedFileCountLimit": 31,
+                  "rollingInterval": "Day",
+                  "fileSizeLimitBytes": 104857600,
+                  "rollOnFileSizeLimit": true
+                }
+              }
+            ]
+          }
+        }
+      }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
