--- a/AppServices/WorkerServices/BaseWorkerService/appsettings.json
+++ b/AppServices/WorkerServices/BaseWorkerService/appsettings.json
@@ -49,5 +49,125 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "RabbitMQSettings": {    
+    "WorkerName": "Base",
+    "Queues": [
+      {
+        "QueuePriority": "low",
+        "QueueName": "base.low.data",
+        "ExchangeName": "base.low.exchange",
+        "RoutingKey": "base.low.key",
+        "PrefetchCount": 1,
+        "RetryCount": 0,
+        "RetryQueues": [
+          {
+            "RetryNumber": 1,
+            "RetryQueueName": "base.low.faulted.data.first",
+            "RetryExchangeName": "base.low.faulted.exchange.first",
+            "RetryMessageTTL": 3000
+          },
+          {
+            "RetryNumber": 2,
+            "RetryQueueName": "base.low.faulted.data.second",
+            "RetryExchangeName": "base.low.faulted.exchange.second",
+            "RetryMessageTTL": 5000
+          },
+          {
+            "RetryNumber": 3,
+            "RetryQueueName": "base.low.faulted.data.last",
+            "RetryExchangeName": "base.low.faulted.exchange.last",
+            "RetryMessageTTL": 10000
+          }
+        ]
+      },
+      {
+        "QueuePriority": "normal",
+        "HostName": "localhost",
+        "QueueName": "base.normal.data",
+        "ExchangeName": "base.normal.exchange",
+        "RoutingKey": "base.normal.key",
+        "PrefetchCount": 1,
+        "RetryCount": 0,
+        "RetryQueues": [
+          {
+            "RetryNumber": 1,
+            "RetryQueueName": "base.normal.faulted.data.first",
+            "RetryExchangeName": "base.normal.faulted.exchange.first",
+            "RetryMessageTTL": 3000
+          },
+          {
+            "RetryNumber": 2,
+            "RetryQueueName": "base.normal.faulted.data.second",
+            "RetryExchangeName": "base.normal.faulted.exchange.second",
+            "RetryMessageTTL": 5000
+          },
+          {
+            "RetryNumber": 3,
+            "RetryQueueName": "base.normal.faulted.data.last",
+            "RetryExchangeName": "base.normal.faulted.exchange.last",
+            "RetryMessageTTL": 10000
+          }
+        ]
+      },
+      {
+        "QueueAlias": "high",
+        "HostName": "localhost",
+        "QueueName": "base.high.data",
+        "ExchangeName": "base.high.exchange",
+        "RoutingKey": "base.high.key",
+        "PrefetchCount": 1,
+        "RetryCount": 0,
+        "RetryQueues": [
+          {
+            "RetryNumber": 1,
+            "RetryQueueName": "base.high.faulted.data.first",
+            "RetryExchangeName": "base.high.faulted.exchange.first",
+            "RetryMessageTTL": 3000
+          },
+          {
+            "RetryNumber": 2,
+            "RetryQueueName": "base.high.faulted.data.second",
+            "RetryExchangeName": "base.high.faulted.exchange.second",
+            "RetryMessageTTL": 5000
+          },
+          {
+            "RetryNumber": 3,
+            "RetryQueueName": "base.high.faulted.data.last",
+            "RetryExchangeName": "base.high.faulted.exchange.last",
+            "RetryMessageTTL": 10000
+          }
+        ]
+      },
+      {
+        "QueueAlias": "service",
+        "HostName": "localhost",
+        "QueueName": "base.service.data",
+        "ExchangeName": "base.service.exchange",
+        "RoutingKey": "base.service.key",
+        "PrefetchCount": 100,
+        "RetryCount": 0,
+        "RetryQueues": [
+          {
+            "RetryNumber": 1,
+            "RetryQueueName": "base.service.faulted.data.first",
+            "RetryExchangeName": "base.service.faulted.exchange.first",
+            "RetryMessageTTL": 3000
+          },
+          {
+            "RetryNumber": 2,
+            "RetryQueueName": "base.service.faulted.data.second",
+            "RetryExchangeName": "base.service.faulted.exchange.second",
+            "RetryMessageTTL": 5000
+          },
+          {
+            "RetryNumber": 3,
+            "RetryQueueName": "base.service.faulted.data.last",
+            "RetryExchangeName": "base.service.faulted.exchange.last",
+            "RetryMessageTTL": 10000
+          }
+        ]
+      }
+    ]
   }
 }
