#4 Add rabbitmq support to web api service

--- a/AppServices/WebAPIService/appsettings.json
+++ b/AppServices/WebAPIService/appsettings.json
@@ -81,7 +81,8 @@
     "DefaultConnection": "Server={0};Port={1};Database=phrygia_webapi;User Id={2};Password={3};Application Name=Phrygia.WebAPI;Command Timeout=60;"    
   },
   "ApplicationOptions": {
-    "IdentityServiceURI": "http://{0}:{1}/"
+    "IdentityServiceURI": "http://{0}:{1}/",
+    "RabbitMQSeriveURI":"amqp://{0}:{1}@{2}:{3}"
   },
   "AllowedHosts": "*"
 }
