--- a/AppServices/WebAPIService/Properties/launchSettings.json
+++ b/AppServices/WebAPIService/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5002",
+      "applicationUrl": "http://localhost:5005",
       "sslPort": 0
     }
   },
@@ -23,11 +23,15 @@
         "PIS_DB_HOST": "127.0.0.1",
         "PIS_DB_PORT": "5432",
         "PIS_DB_USER": "postgres",
-        "PIS_DB_PASSWORD": "yfa$t?c&=7gYYn8L",
-        "PIS_HOST":"172.17.0.1",
-        "PIS_PORT":"5000"
+        "PIS_DB_PASSWORD": "IlJU7f71Vh7rM1yv",
+        "PIS_HOST":"127.0.0.1",
+        "PIS_PORT":"5000",
+        "RMQ_USER":"rabbitmq",
+        "RMQ_PASSWORD":"IlJU7f71Vh7rM1yv",
+        "RMQ_HOST":"127.0.0.1",
+        "RMQ_PORT":"5672"
       },
-      "applicationUrl": "http://localhost:5002"
+      "applicationUrl": "http://localhost:5005"
     }
   }
 }
