--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
         container_name: webapi_service
         ports:
           - "5002:5002"
+          - "5003:5003"
         environment: 
           API_DB_HOST: "172.17.0.1"
           API_DB_PORT: "5432"
@@ -16,9 +17,14 @@ services:
           API_DB_PASSWORD: "IlJU7f71Vh7rM1yv"
           PIS_HOST: "172.17.0.1"
           PIS_PORT: "5000"
+          RMQ_USER: "rabbitmq"
+          RMQ_PASSWORD: "IlJU7f71Vh7rM1yv"
+          RMQ_HOST: "172.17.0.1"
+          RMQ_PORT: "5672"
           ASPNETCORE_ENVIRONMENT: "Development"
         depends_on:    
-          -  identity_service    
+          -  identity_service  
+          -  rabbitmq  
         #networks:
          # services-network:
           #  aliases:
@@ -32,6 +38,7 @@ services:
         container_name: identity_service
         ports:
           - "5000:5000"
+          - "5001:5001"
         environment: 
           PIS_DB_HOST: "172.17.0.1"
           PIS_DB_PORT: "5432"
@@ -71,7 +78,11 @@ services:
             - rmq_data:/var/lib/rabbitmq/
             - rmq_logs:/var/log/rabbitmq/
         ports:
+            - "4369:4369"
+            - "5671:5671"
             - "5672:5672"
+            - "25672:25672"
+            - "15671:15671"
             - "15672:15672"
 
 volumes: 
