#4 create first working producer-consumer message event

--- a/AppServices/WorkerServices/NotificationWorkerService/Properties/launchSettings.json
+++ b/AppServices/WorkerServices/NotificationWorkerService/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "profiles": {
-    "BaseWorkerService": {
+    "NotificationWorkerService": {
       "commandName": "Project",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development",
