--- a/AppServices/WorkerServices/NotificationWorkerService/appsettings.json
+++ b/AppServices/WorkerServices/NotificationWorkerService/appsettings.json
@@ -51,29 +51,19 @@
     }
   },
   "RabbitMQSettings": {    
-    "WorkerName": "Base",    
+    "RabbitMQSeriveURI":"amqp://{0}:{1}@{2}:{3}",
     "Queues": [
       {
-        "QueueName": "private.data",
+        "QueueName": "notification.sender.queue",
         "Durable":true,        
-        "PrefetchCount": 1
-      },
-      {
-        "QueueName": "public.data",
-        "Durable":true,
         "PrefetchCount": 1
       }
     ],
     "Bindings": [
       {
-        "QueueName":"private.data",
+        "QueueName":"notification.sender.queue",
         "ExchangeName":"amq.direct",
-        "RoutingKey":"private"
-      },
-      {
-        "QueueName":"public.data",
-        "ExchangeName":"amq.direct",
-        "RoutingKey":"public"
+        "RoutingKey":"user.notification.event"
       }
     ]
   }
