--- a/AppServices/WebAPIService/WebAPIService.csproj
+++ b/AppServices/WebAPIService/WebAPIService.csproj
@@ -12,9 +12,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.3" />
     <PackageReference Include="RabbitMQ.Client" Version="6.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
     <PackageReference Include="Serilog.Filters.Expressions" Version="2.1.0" />
@@ -24,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\DataServices\BusinessServices\BusinessServices.csproj" />
+    <ProjectReference Include="..\..\DataServices\DataAccess\DataAccess.csproj" />
   </ItemGroup>
 
   <ItemGroup>
