--- a/DataServices/BusinessServices/BusinessServices.csproj
+++ b/DataServices/BusinessServices/BusinessServices.csproj
@@ -4,14 +4,17 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="CommonServiceLocator" Version="1.3.0" />
-  </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Contracts\Contracts.Shared\Contracts.Shared.csproj" />
+    <ProjectReference Include="..\..\Contracts\Contracts.Shared\Contracts.Shared.csproj" />    
+    <ProjectReference Include="..\Domain\Domain.csproj" />    
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
-    <ProjectReference Include="..\Domain\Domain.csproj" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
   </ItemGroup>
 
 </Project>
