--- a/AppServices/WebAPIService/Properties/launchSettings.json
+++ b/AppServices/WebAPIService/Properties/launchSettings.json
@@ -20,10 +20,10 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "PIS_DB_HOST": "127.0.0.1",
-        "PIS_DB_PORT": "5432",
-        "PIS_DB_USER": "postgres",
-        "PIS_DB_PASSWORD": "IlJU7f71Vh7rM1yv",
+        "API_DB_HOST": "127.0.0.1",
+        "API_DB_PORT": "5432",
+        "API_DB_USER": "postgres",
+        "API_DB_PASSWORD": "IlJU7f71Vh7rM1yv",
         "PIS_HOST":"127.0.0.1",
         "PIS_PORT":"5000",
         "RMQ_USER":"rabbitmq",
