--- a/AppServices/WebAPIService/appsettings.json
+++ b/AppServices/WebAPIService/appsettings.json
@@ -74,7 +74,8 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Warning",
+      "Microsoft.EntityFrameworkCore":"Debug"
     }
   },
   "ConnectionStrings": {
