closes #1 Add create and confirm identityt for IS

--- a/AppServices/IdentityService/Properties/launchSettings.json
+++ b/AppServices/IdentityService/Properties/launchSettings.json
@@ -23,7 +23,7 @@
         "PIS_DB_HOST": "127.0.0.1",
         "PIS_DB_PORT": "5432",
         "PIS_DB_USER": "postgres",
-        "PIS_DB_PASSWORD": "yfa$t?c&=7gYYn8L"
+        "PIS_DB_PASSWORD": "IlJU7f71Vh7rM1yv"
       },
       "applicationUrl": "http://localhost:5000"
     }
