--- a/AppServices/IdentityService/IdentityService.csproj
+++ b/AppServices/IdentityService/IdentityService.csproj
@@ -6,6 +6,7 @@
   
   <ItemGroup>
     <!--<PackageReference Include="IdentityServer4" Version="3.1.0" />-->
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.3" />
 
