--- a/AppServices/WebAPIService/appsettings.json
+++ b/AppServices/WebAPIService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Serilog": {
-    "Using": [ "Serilog.Filters.Expressions" ],
+    "Using": [ "Serilog.Filters.Expressions", "Serilog.Sinks.Console" ],
     "MinimumLevel": "Information",
     "WriteTo": [
       {
@@ -19,63 +19,17 @@
           "fileSizeLimitBytes": 104857600,
           "rollOnFileSizeLimit": true
         }
-      },
-      {
-        "Name": "Logger",
-        "Args": {
-          "configureLogger": {
-            "MinimumLevel": "Error",
-            "WriteTo": [
-              {
-                "Name": "File",
-                "Args": {
-                  "path": "logs/API.Error-.txt",
-                  "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] ({SourceContext}) {Message}{NewLine}{Exception}",
-                  "retainedFileCountLimit": 31,
-                  "rollingInterval": "Day",
-                  "fileSizeLimitBytes": 104857600,
-                  "rollOnFileSizeLimit": true
-                }
-              }
-            ]
-          }
-        }
-      },
-      {
-        "Name": "Logger",
-        "Args": {
-          "configureLogger": {
-            "MinimumLevel": "Debug",
-            "WriteTo": [
-              {
-                "Name": "File",
-                "Args": {
-                  "path": "logs/API.HTTP-.txt",
-                  "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] ({SourceContext}) {Message}{NewLine}{Exception}",
-                  "retainedFileCountLimit": 31,
-                  "rollingInterval": "Day",
-                  "fileSizeLimitBytes": 104857600,
-                  "rollOnFileSizeLimit": true
-                }
-              }
-            ],
-            "Filter": [
-              {
-                "Name": "ByIncludingOnly",
-                "Args": {
-                  "expression": "EndsWith(SourceContext, 'RequestResponseLoggingMiddleware')"
-                }
-              }
-            ]
-          }
-        }
       }
-    ]
+    ],
+    "Properties": {
+        "Application": "WebAPILight"
+    }
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning",
-      "Microsoft.EntityFrameworkCore":"Debug"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "ConnectionStrings": {
