--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,6 +101,21 @@ services:
         depends_on:    
           -  rabbitmq  
 
+    elasticsearch:
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.6.2
+        container_name: elasticsearch
+        environment: 
+          discovery.type: "single-node"        
+        ports:
+            - "9200:9200"
+            - "9300:9300"
+
+    kibana:
+      image: docker.elastic.co/kibana/kibana:7.6.2
+      ports:
+        - "5601:5601"
+
+
 volumes: 
   pg_data:
   rmq_etc:
