--- a/AppServices/WebAPIService/appsettings.json
+++ b/AppServices/WebAPIService/appsettings.json
@@ -6,14 +6,14 @@
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "===> {Timestamp:HH:mm:ss.fff zzz} [{ThreadId}] [{Level}] {Message}{NewLine}{Exception}"
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"          
         }
       },
       {
         "Name": "File",
         "Args": {
           "path": "logs/API-.txt",
-          "outputTemplate": "===> {Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}",
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
           "retainedFileCountLimit": 31,
           "rollingInterval": "Day",
           "fileSizeLimitBytes": 104857600,
@@ -21,15 +21,9 @@
         }
       }
     ],
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
     "Properties": {
         "Application": "WebAPILight"
-    }
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "ConnectionStrings": {
