--- a/AppServices/WebAPIService/WebAPIService.csproj
+++ b/AppServices/WebAPIService/WebAPIService.csproj
@@ -2,7 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-  
+    <PackageId>Sample.Versioning.Swagger</PackageId>  
+    <Product>Sample versioning service</Product>  
+    <Description>Sample product catalog REST API service project</Description>  
   </PropertyGroup>
 
   
@@ -16,6 +18,8 @@
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="4.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -40,6 +44,10 @@
     <None Update="Certes\7d8c17b3-17e8-4fd0-8d83-89d9d02123cf.pfx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+      <Compile Remove="Versions\Any\**\*.cs"  Condition="'$(ConfigurationName)' != 'Debug'"/>
   </ItemGroup>
 
 </Project>
