#8 Add seq support

--- a/AppServices/WebAPIService/Properties/launchSettings.json
+++ b/AppServices/WebAPIService/Properties/launchSettings.json
@@ -29,7 +29,8 @@
         "RMQ_USER":"rabbitmq",
         "RMQ_PASSWORD":"IlJU7f71Vh7rM1yv",
         "RMQ_HOST":"127.0.0.1",
-        "RMQ_PORT":"5672"
+        "RMQ_PORT":"5672",
+        "Serilog__WriteTo__2__Args__serverUrl":"http://localhost:5341"
       },
       "applicationUrl": "http://localhost:5005"
     }
