--- a/AppServices/WebAPIService/appsettings.json
+++ b/AppServices/WebAPIService/appsettings.json
@@ -19,6 +19,12 @@
           "fileSizeLimitBytes": 104857600,
           "rollOnFileSizeLimit": true
         }
+      },
+      { 
+        "Name": "Seq", 
+        "Args": { 
+          "serverUrl": "http://localhost:5342" 
+        } 
       }
     ],
     "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
