--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,11 @@ services:
           RMQ_HOST: "172.17.0.1"
           RMQ_PORT: "5672"
           ASPNETCORE_ENVIRONMENT: "Development"          
+          Serilog__WriteTo__2__Args__serverUrl: "http://172.17.0.1:5341"
         depends_on:    
           -  identity_service  
           -  rabbitmq  
+          -  seq
           
           
     identity_service:
@@ -96,20 +98,16 @@ services:
           DOTNET_ENVIRONMENT: "Development"
         depends_on:    
           -  rabbitmq  
-
-    elasticsearch:
-        image: docker.elastic.co/elasticsearch/elasticsearch:7.6.2
-        container_name: elasticsearch
-        environment: 
-          discovery.type: "single-node"        
-        ports:
-            - "9200:9200"
-            - "9300:9300"
-
-    kibana:
-      image: docker.elastic.co/kibana/kibana:7.6.2
-      ports:
-        - "5601:5601"
+          
+    seq:
+     image: datalust/seq
+     ports:
+      - 5341:5341
+      - 5340:80
+     environment: 
+      ACCEPT_EULA: Y
+     volumes: 
+      - seq_data:/data
 
 
 volumes: 
@@ -117,4 +115,5 @@ volumes:
   rmq_etc:
   rmq_data:
   rmq_logs:
+  seq_data:
 
