#7 fix notification worker start problem

--- a/AppServices/WorkerServices/NotificationWorkerService/appsettings.json
+++ b/AppServices/WorkerServices/NotificationWorkerService/appsettings.json
@@ -51,7 +51,7 @@
     }
   },
   "RabbitMQSettings": {    
-    "RabbitMQSeriveURI":"amqp://{0}:{1}@{2}:{3}",
+    "RabbitMQServiceURI":"amqp://{0}:{1}@{2}:{3}",
     "Queues": [
       {
         "QueueName": "notification.sender.queue",
