--- a/Tests/BusinessServices.IntegrationTests/BusinessServices.IntegrationTests.csproj
+++ b/Tests/BusinessServices.IntegrationTests/BusinessServices.IntegrationTests.csproj
@@ -7,9 +7,29 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Moq" Version="4.14.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.3" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+    <PackageReference Include="Respawn" Version="3.3.0" />
+    <PackageReference Include="Respawn.Postgres" Version="10.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\AppServices\WebAPIService\WebAPIService.csproj" />
+  </ItemGroup>
+
+   <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <None Remove="appsettings.json" />
   </ItemGroup>
 
 </Project>
