Add CQRS to Identity Service

--- a/AppServices/IdentityService/appsettings.Development.json
+++ b/AppServices/IdentityService/appsettings.Development.json
@@ -1,34 +1,60 @@
 {
-  "Serilog": {
-    "MinimumLevel": "Debug"
-  },
-  "Kestrel": {
-    "Endpoints": {
-      "HTTP": { "Url": "http://*:80" },
-      "HTTPS": {
-        "Url": "https://*:443",
-        "Certificate": {
-          "Path": "Certes/7d8c17b3-17e8-4fd0-8d83-89d9d02123cf.pfx",
-          "Password": ""
-        }
+  "IdentityService": {
+    "IssuerUri": "phrygia.org",
+    "IdentityResources": [
+      {
+        "Name": "openid",
+        "DisplayName": "Your user identifier"
+      },
+      {
+        "Name": "profile",
+        "DisplayName": "Your user identifier"
+      },
+      {
+        "Name": "email",
+        "DisplayName": "Your user identifier"
       }
-    }
-  },
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Debug"
+    ],
+    "ApiResources": [
+      {
+        "Name": "phrygiawebapi",
+        "DisplayName": "My API",
+  
+        "Scopes": [
+          {
+            "Name": "phrygiawebapi",
+            "DisplayName": "My API"
+          }
+        ]
       }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Trace"
+    ],
+    "Clients": [
+      {
+        "Enabled": true,
+        "ClientId": "personal_local",
+        "ClientName": "Local Development User",
+        "ClientSecrets": [ { "Value": "K7gNU3sdo+OL0wNhqoVWhr3g6s1xYv72ol/pe/Unols=" } ],
+        "AllowedGrantTypes": [ "custom" ],
+        "AllowedScopes": [ "phrygiawebapi" ],
+        "AllowAccessTokensViaBrowser":true,
+        "RequireConsent": false
+      },
+      {
+        "Enabled": true,
+        "ClientId": "application_local",
+        "ClientName": "Local Development Application",
+        "ClientSecrets": [ { "Value": "K7gNU3sdo+OL0wNhqoVWhr3g6s1xYv72ol/pe/Unols=" } ],
+        "AllowedGrantTypes": [ "client_credentials" ],
+        "AllowedScopes": [ "phrygiawebapi" ],
+        "AllowAccessTokensViaBrowser":true,
+        "RequireConsent": false
       }
-    }
+    ]
   },
   "ApplicationOptions": {
-    "Pepper":"Tk<4edZ)^^iA*)Ecb?;76GL:Bo=gV:"
+    "Pepper":"Tk<4edZ)^^iA*)Ecb?;76GL:Bo=gV:",
+    "LowerBoundCode":"1",
+    "UpperBoundCode":"1"
   },
   "TokenLifetime": 3600
 }
