--- a/AppServices/IdentityService/appsettings.json
+++ b/AppServices/IdentityService/appsettings.json
@@ -1,100 +1,50 @@
 {
   "Serilog": {
+    "Using": [ "Serilog.Filters.Expressions", "Serilog.Sinks.Console" ],
     "MinimumLevel": "Information",
     "WriteTo": [
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "===> {Timestamp:HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}"
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"          
         }
       },
       {
         "Name": "File",
         "Args": {
           "path": "logs/IS-.txt",
-          "outputTemplate": "===> {Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}",
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
           "retainedFileCountLimit": 31,
           "rollingInterval": "Day",
           "fileSizeLimitBytes": 104857600,
           "rollOnFileSizeLimit": true
         }
       },
-      {
-        "Name": "Logger",
-        "Args": {
-          "configureLogger": {
-            "MinimumLevel": "Error",
-            "WriteTo": [
-              {
-                "Name": "File",
-                "Args": {
-                  "path": "logs/IS.Error-.txt",
-                  "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] ({SourceContext}) {Message}{NewLine}{Exception}",
-                  "retainedFileCountLimit": 31,
-                  "rollingInterval": "Day",
-                  "fileSizeLimitBytes": 104857600,
-                  "rollOnFileSizeLimit": true
-                }
-              }
-            ]
-          }
-        }
+      { 
+        "Name": "Seq", 
+        "Args": { 
+          "serverUrl": "http://localhost:5342" 
+        } 
       }
-    ]
+    ],
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
+    "Properties": {
+        "Application": "IdentityService"
+    }
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server={0};Port={1};Database=phrygia_identity;User Id={2};Password={3};Application Name=Phrygia.Identity;Command Timeout=60;"    
   },
-  "IdentityService": {
-    "IssuerUri": "phrygia.org",
-    "IdentityResources": [
-      {
-        "Name": "openid",
-        "DisplayName": "Your user identifier"
-      },
-      {
-        "Name": "profile",
-        "DisplayName": "Your user identifier"
-      },
-      {
-        "Name": "email",
-        "DisplayName": "Your user identifier"
+  "Kestrel": {
+    "Endpoints": {
+      "HTTP": { "Url": "http://*:5000" },
+      "HTTPS": {
+        "Url": "https://*:5001",
+        "Certificate": {
+          "Path": "Certes/7d8c17b3-17e8-4fd0-8d83-89d9d02123cf.pfx",
+          "Password": ""
+        }
       }
-    ],
-    "ApiResources": [
-      {
-        "Name": "phrygiawebapi",
-        "DisplayName": "My API",
-  
-        "Scopes": [
-          {
-            "Name": "phrygiawebapi",
-            "DisplayName": "My API"
-          }
-        ]
-      }
-    ],
-    "Clients": [
-      {
-        "Enabled": true,
-        "ClientId": "personal_local",
-        "ClientName": "Local Development User",
-        "ClientSecrets": [ { "Value": "K7gNU3sdo+OL0wNhqoVWhr3g6s1xYv72ol/pe/Unols=" } ],
-        "AllowedGrantTypes": [ "custom" ],
-        "AllowedScopes": [ "phrygiawebapi" ],
-        "AllowAccessTokensViaBrowser":true,
-        "RequireConsent": false
-      },
-      {
-        "Enabled": true,
-        "ClientId": "application_local",
-        "ClientName": "Local Development Application",
-        "ClientSecrets": [ { "Value": "K7gNU3sdo+OL0wNhqoVWhr3g6s1xYv72ol/pe/Unols=" } ],
-        "AllowedGrantTypes": [ "client_credentials" ],
-        "AllowedScopes": [ "phrygiawebapi" ],
-        "AllowAccessTokensViaBrowser":true,
-        "RequireConsent": false
-      }
-    ]
+    }
   }
 }
