--- a/AppServices/IdentityService/Dockerfile
+++ b/AppServices/IdentityService/Dockerfile
@@ -5,7 +5,7 @@ RUN mkdir -p /source
 WORKDIR /source
 
 # Copy the main source project files
-COPY . .
+COPY ./AppServices/IdentityService .
 RUN dotnet restore
 
 RUN dotnet publish -c debug -o /app --no-restore
