--- a/AppServices/IdentityService/IdentityService.csproj
+++ b/AppServices/IdentityService/IdentityService.csproj
@@ -36,6 +36,9 @@
     </PackageReference>
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="8.6.2" />    
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="4.1.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.1" />
   </ItemGroup>
 
   <ItemGroup>
