--- a/AppServices/WebAPIService/ClientApp/package.json
+++ b/AppServices/WebAPIService/ClientApp/package.json
@@ -17,19 +17,20 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "~8.2.14",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
+    "@angular/http": "^7.2.15",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/platform-server": "^8.2.14",
+    "@angular/router": "~8.2.14",
     "@agm/core": "1.1.0",
-    "@angular/animations": "9.0.5",
-    "@angular/cdk": "9.1.1",
-    "@angular/common": "9.0.5",
-    "@angular/compiler": "9.0.5",
-    "@angular/core": "9.0.5",
-    "@angular/forms": "9.0.5",
-    "@angular/http": "7.2.16",
-    "@angular/material": "9.1.1",
-    "@angular/platform-browser": "9.0.5",
-    "@angular/platform-browser-dynamic": "9.0.5",
-    "@angular/platform-server": "9.0.5",
-    "@angular/router": "9.0.5",
+    "@angular/service-worker": "^9.1.5",
     "ajv": "6.12.0",
     "arrive": "2.4.1",
     "bootstrap": "4.3.1",
@@ -42,37 +43,39 @@
     "googleapis": "40.0.0",
     "hammerjs": "2.0.8",
     "jquery": "3.4.1",
-    "moment": "2.24.0",
+    "moment": "2.25.3",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.15.0",
-    "rxjs": "6.5.2",
+    "rxjs": "~6.5.4",
     "rxjs-compat": "6.5.2",
+    "tslib": "^1.10.0",
     "web-animations-js": "2.3.1",
-    "zone.js": "0.10.2"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.900.5",
-    "@angular/cli": "9.0.5",
-    "@angular/compiler-cli": "9.0.5",
-    "@angular/language-service": "9.0.5",
+    "@angular-devkit/build-angular": "~0.901.4",
+    "@angular/cli": "~9.1.4",
+    "@angular/compiler-cli": "^9.1.5",
+    "@angular/language-service": "^9.1.5",
     "@types/bootstrap": "4.3.0",
     "@types/chartist": "0.9.46",
     "@types/googlemaps": "3.36.4",
-    "@types/jasmine": "3.3.13",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "3.3.29",
-    "@types/node": "12.0.7",
-    "codelyzer": "5.2.1",
-    "jasmine-core": "3.5.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.4.1",
-    "karma-chrome-launcher": "3.1.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "^5.0.5",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "2.1.1",
-    "karma-jasmine": "3.1.1",
-    "karma-jasmine-html-reporter": "1.5.2",
-    "protractor": "5.4.3",
-    "ts-node": "8.6.2",
-    "tslint": "6.0.0",
-    "typescript": "3.7.5"
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~3.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.3",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~3.8.3"
   }
 }
