add refresh token and restricted routes

--- a/AppServices/IdentityService/appsettings.Development.json
+++ b/AppServices/IdentityService/appsettings.Development.json
@@ -35,9 +35,12 @@
         "ClientName": "Local Development User",
         "ClientSecrets": [ { "Value": "K7gNU3sdo+OL0wNhqoVWhr3g6s1xYv72ol/pe/Unols=" } ],
         "AllowedGrantTypes": [ "custom" ],
-        "AllowedScopes": [ "phrygiawebapi" ],
+        "AllowedScopes": [ "phrygiawebapi", "offline_access" ],
         "AllowAccessTokensViaBrowser":true,
-        "RequireConsent": false
+        "RequireConsent": false,
+        "AccessTokenLifetime":14400,
+        "RequireClientSecret":false,
+        "AllowOfflineAccess":true
       },
       {
         "Enabled": true,
@@ -55,6 +58,5 @@
     "Pepper":"Tk<4edZ)^^iA*)Ecb?;76GL:Bo=gV:",
     "LowerBoundCode":"1",
     "UpperBoundCode":"1"
-  },
-  "TokenLifetime": 3600
+  }
 }
