--- a/ClientApplications/Angular/Dockerfile
+++ b/ClientApplications/Angular/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:14.2.0-alpine3.10 AS build
 WORKDIR /usr/src/app
-COPY package.json ./
+COPY ./ClientApplications/Angular/package.json ./
 RUN npm install
-COPY . .
+COPY ./ClientApplications/Angular .
 RUN npm run build
 
 FROM nginx:1.17.10-alpine
