Add offline auth to web api jwt verification

--- a/AppServices/IdentityService/appsettings.Development.json
+++ b/AppServices/IdentityService/appsettings.Development.json
@@ -17,7 +17,7 @@
     ],
     "ApiResources": [
       {
-        "Name": "phrygiawebapi",
+        "Name": "phrygiawebapi offline_access",
         "DisplayName": "My API",
   
         "Scopes": [
