It's finaly running and working.

--- a/AppServices/WebAPIService/appsettings.Development.json
+++ b/AppServices/WebAPIService/appsettings.Development.json
@@ -1,5 +1,45 @@
 {
-  
+  "Serilog": {
+    "Using": [ "Serilog.Filters.Expressions", "Serilog.Sinks.Console" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"          
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/API-.txt",
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
+          "retainedFileCountLimit": 31,
+          "rollingInterval": "Day",
+          "fileSizeLimitBytes": 104857600,
+          "rollOnFileSizeLimit": true
+        }
+      },
+      { 
+        "Name": "Seq", 
+        "Args": { 
+          "serverUrl": "http://localhost:5342" 
+        } 
+      }
+    ],
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
+    "Properties": {
+        "Application": "WebAPILight"
+    }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server={0};Port={1};Database=phrygia_webapi;User Id={2};Password={3};Application Name=Phrygia.WebAPI;Command Timeout=60;"    
+  },
+  "ApplicationOptions": {
+    "IdentityServiceURI": "http://{0}:{1}/",
+    "RabbitMQSeriveURI":"amqp://{0}:{1}@{2}:{3}"
+  },
+  "AllowedHosts": "*",
   "Kestrel": {
     "Endpoints": {
       "HTTP": { "Url": "http://*:5002" },
